# wgtui

./: Cargo.toml  build.rs  packages.json
src/: lib.rs  main.rs  tui.rs
tests/: main_test.rs
