[package]
name = "wgtui"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
inquire = "0.7"
colored = "2.0"
regex = "1.10"
dirs = "5.0"
thiserror = "2"
anyhow = "1"

[dev-dependencies]
tempfile = "3"

[lints.clippy]
must_use_candidate = "warn"
missing_errors_doc = "warn"
unwrap_used = "warn"
